--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "ts-node-dev": "^2.0.0"
   }
 }
