--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
     "supertest": "^6.3.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.4",
+    "@types/supertest": "^2.0.16",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
   }
 }
