--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
+    "test": "jest --coverage --detectOpenHandles src/index.js --passWithNoTests",
     "build": "tsc"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "supertest": "^6.3.3",
     "typescript": "^5.2.2"
   },
