--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/node": "^20.9.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "typescript": "^5.2.2"
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.35.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -22,7 +24,11 @@
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.4",
     "@types/supertest": "^2.0.16",
+    "sequelize-cli": "^6.6.2",
+    "sequelize-typescript": "^2.1.5",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
