--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
     "test": "jest --coverage --detectOpenHandles src/index.js --passWithNoTests",
-    "build": "tsc"
+    "build": "tsc",
+    "format": "yarn prettier --write ."
   },
   "dependencies": {
     "@types/node": "^20.9.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "prettier": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.4",
     "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
     "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.5",
     "supertest": "^6.3.3",
