--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.23.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.9.5",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
