--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "prettier": "^3.1.0",
     "reflect-metadata": "^0.1.13",
@@ -28,6 +29,7 @@
     "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mocha": "^10.0.4",
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
