--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "pg": "^8.11.3",
     "prettier": "^3.1.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -32,6 +34,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mocha": "^10.0.4",
     "@types/supertest": "^2.0.16",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
     "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.5",
