--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,7 @@
 PORT=3001
 DB_HOST=localhost
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=1234
+DB_DATABASE=postgres
 NODE_ENV=
